# 30_dias_de_python

./: README.md  pyproject.toml
dia_03/: pyproject.toml  test_http.py
dia_04/: README.md  exemplo.py  pyproject.toml  test_http.py
dia_05/: exemplo.py  test_http.py
